# quotes_of_famous_people

./: pyproject.toml
quotes_of_famous_people/: db.sqlite3  manage.py  pyproject.toml
quotes_of_famous_people/quotes/: forms.py  models.py  urls.py  views.py
quotes_of_famous_people/quotes/management/commands/: import_data.py
quotes_of_famous_people/quotes/migrations/: 0001_initial.py  0002_authordjango_user_quotedjango_user.py
quotes_of_famous_people/quotes/static/quotes/: style.css
quotes_of_famous_people/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  founded_quotes.html  index.html  pagination.html  show_author.html  top ten.html
quotes_of_famous_people/quotes_of_famous_people/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
quotes_of_famous_people/quotes_of_famous_people/quotes/: forms.py  models.py  urls.py  views.py
quotes_of_famous_people/quotes_of_famous_people/quotes/management/commands/: import_data.py
quotes_of_famous_people/quotes_of_famous_people/quotes/migrations/: 0001_initial.py  0002_authordjango_user_quotedjango_user.py
quotes_of_famous_people/quotes_of_famous_people/quotes_of_famous_people/: asgi.py  settings.py  urls.py  wsgi.py
quotes_of_famous_people/quotes_of_famous_people/quotes_of_famous_people/conf/: config.py
quotes_of_famous_people/quotes_of_famous_people/users/: forms.py  urls.py  views.py
quotes_of_famous_people/users/: forms.py  urls.py  views.py
quotes_of_famous_people/users/templates/users/: login.html  registration.html
(+13 files in other folders)
